--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: 当前文件",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "Python: v3",
             "type": "python",
             "request": "launch",
@@ -60,7 +67,7 @@
                 "--times",
                 "5",
                 "--area-num",
-                "1"
+                "2"
             ]
         },
         {
@@ -77,6 +84,48 @@
                 "v5.mp4",
                 "--capture-time",
                 "1",
+                "4",
+                "--times",
+                "5",
+                "--area-num",
+                "1"
+            ]
+        },
+        {
+            "name": "Python: v2",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "cwd": "${fileDirname}",
+            "args": [
+                "--device",
+                "cuda",
+                "--input-source",
+                "v2.mp4",
+                "--capture-time",
+                "2",
+                "5",
+                "--times",
+                "5",
+                "--area-num",
+                "2"
+            ]
+        },
+        {
+            "name": "Python: v6",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "cwd": "${fileDirname}",
+            "args": [
+                "--device",
+                "cuda",
+                "--input-source",
+                "v6.mp4",
+                "--capture-time",
+                "1",
                 "3",
                 "--times",
                 "5",
@@ -84,6 +133,5 @@
                 "1"
             ]
         }
-
     ]
 }
